<resources>
    <string name="app_name">Set</string>
    <string name="title">Practice Set</string>
    <string name="yes_a_set">Yes, a set</string>
    <string name="not_a_set">Not a set</string>
    <string name="card1">Card1</string>
    <string name="card2">Card2</string>
    <string name="card3">Card3</string>
    <string name="card_count">Cards Remaining: %1$d</string>
    <string name="time_elapsed">Time Elapsed: %1$s</string>
    <string name="seed_value">Seed: %1$d</string>
    <string name="win_text">You have won!</string>
    <string name="start">Start Game</string>
    <string name="seed_mode">Seed Mode</string>
    <string name="timed_mode">Timed Mode</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
</resources>
